@@ -62,6 +62,7 @@
 		[DllImport("gnomesharpglue-2")]
 		static extern void gnomesharp_canvas_item_override_realize (GLib.GType gtype, RealizeDelegate cb);
 
+		[GLib.CDeclCallback]
 		delegate void RealizeDelegate (IntPtr item);
 
                 static RealizeDelegate RealizeCallback;
@@ -91,6 +92,7 @@
 		[DllImport("gnomesharpglue-2")]
 		static extern void gnomesharp_canvas_item_override_point (GLib.GType gtype, PointDelegate cb);
 
+		[GLib.CDeclCallback]
 		delegate double PointDelegate (IntPtr item, double x, double y, int cx, int cy, out IntPtr actual_item_handle);
 
                 static PointDelegate PointCallback;
@@ -126,6 +128,7 @@
 		[DllImport("gnomesharpglue-2")]
 		static extern void gnomesharp_canvas_item_override_draw (GLib.GType gtype, DrawDelegate cb);
 
+		[GLib.CDeclCallback]
 		delegate void DrawDelegate (IntPtr handle, IntPtr drawable, int x, int y, int width, int height);
 
                 static DrawDelegate DrawCallback;
@@ -156,6 +159,7 @@
 		[DllImport("gnomesharpglue-2")]
 		static extern void gnomesharp_canvas_item_override_render (GLib.GType gtype, RenderDelegate cb);
 
+		[GLib.CDeclCallback]
 		delegate void RenderDelegate (IntPtr handle, ref CanvasBuf buf);
 
                 static RenderDelegate RenderCallback;
@@ -185,6 +189,7 @@
 		[DllImport("gnomesharpglue-2")]
 		static extern void gnomesharp_canvas_item_override_update (GLib.GType gtype, UpdateDelegate cb);
 
+		[GLib.CDeclCallback]
 		delegate void UpdateDelegate (IntPtr item, IntPtr affine_ptr, IntPtr clip_path, int flags);
 
                 static UpdateDelegate UpdateCallback;
