@@ -1,3 +1,8 @@
+2005-03-25  Mike Kestner  <mkestner@novell.com>
+
+	* */*.cs : tag native callback delegates with [CDeclCallback].
+	* */*.custom : tag native callback delegates with [CDeclCallback].
+
 2005-03-24  Mike Kestner  <mkestner@novell.com>
 
 	* generator/CallbackGen.cs : don't create native delegates for nulls.
